# novolis-raylib

./: .gitignore  AGENTS.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Novolis.Raylib.slnx  README.md  coverage.runsettings  microsoft.testing.platform.msbuild.nuspec
.cursor/: hooks.json
.cursor/hooks/: guard-generated-files.ps1  remind-after-manifest-edit.ps1
.cursor/plans/: c#_coverage_100_0524d7d7.plan.md  capture_package_split_edfd402e.plan.md  golden_report_styling_142f8267.plan.md  golden_test_framework_23908f7c.plan.md  imgui_replaces_raygui_917f033b.plan.md  migrate_to_org_remote_8bc5fb98.plan.md  pipeline_steps_layout_44835480.plan.md  x-fighter_3d_sample_318e152d.plan.md
.cursor/rules/: agentic-tools.mdc  codegen-manifests.mdc  generated-csharp.mdc  novolis-git-remote.mdc
.github/workflows/: ci.yml  merge.yml  pull-request.yml  release.yml
.novolis/: packages.json
agentic-tools/: README.md  registry.json
agentic-tools/workflows/: codegen.md
codegen/: Directory.Build.props  README.md
codegen/Novolis.Raylib.CodeGen/: CodegenFormatter.cs  CodegenHeaders.cs  HookDiscovery.cs  Novolis.Raylib.CodeGen.csproj  Program.cs  RaylibBindingCodegenHost.cs  RaylibCodegenPipeline.cs  RepoPaths.cs
codegen/Novolis.Raylib.CodeGen.Abstractions/: IPipelineStep.cs  IRaylibCodegenHook.cs  Novolis.Raylib.CodeGen.Abstractions.csproj  PipelineModels.cs  PipelinePaths.cs  RaylibCodegenContext.cs  RaylibCodegenPhase.cs  RaylibPipelineLayout.cs
codegen/Novolis.Raylib.CodeGen.Hooks/: AnnotateLibraryImportHook.cs  InjectEndDrawingNotifyHook.cs  Novolis.Raylib.CodeGen.Hooks.csproj
codegen/Novolis.Raylib.ManifestBootstrap/: Novolis.Raylib.ManifestBootstrap.csproj  Program.cs
codegen/Novolis.Raylib.Manifests/: FacadesManifest.cs  GuiManifest.cs  HudManifest.cs  ImguiShimManifest.cs  Novolis.Raylib.Manifests.csproj  README.md  RayguiFacadeManifest.cs  RayguiShimManifest.cs  Raylib6InteropManifest.cs  RaylibBindingManifestSource.cs  RaylibDebugManifest.cs  RaylibManifestInputPaths.cs
codegen/Novolis.Raylib.Pipeline/: GlobalUsings.cs  Novolis.Raylib.Pipeline.csproj  PipelineProfiles.cs  PipelineRunner.cs  PipelineStepRegistry.cs  ProcessRunner.cs  Program.cs  StepResultWriter.cs  StepSkipEvaluator.cs
coverage/: baseline-summary.json
docs/: codegen.md  getting-started.md  testing.md
native/raylib6-platform/: CMakeLists.txt
native/raylib6-with-imgui/: CMakeLists.txt  novolis_imgui_exports.c  novolis_imgui_exports.cpp
native/raylib6-with-raygui/: CMakeLists.txt  trace_shim.c
pipeline/raylib6/: BUILDING.txt  clangsharp.rsp  facades.manifest.json  fetch-sources.cs  generate-bindings.cs  generate-raygui-interop.cs  generate-raylib-debug-hooks.cs  generate-raylib-interop.cs  gui.manifest.json  hud.manifest.json  imgui-exports.manifest.json  raygui-exports.manifest.json  raylib-debug.manifest.json  raylib-exports.manifest.json  run.cs  verify-raylib-manifest-against-vendor.cs  versions.json
samples/HelloCapture/: HelloCapture.csproj  Program.cs
samples/HelloGame/: HelloGame.csproj  Program.cs
samples/HelloGui/: HelloGui.csproj  Program.cs
samples/HelloHosting/: HelloHosting.csproj  Program.cs
samples/HelloRaygui/: HelloRaygui.csproj  Program.cs
samples/HelloRuntime/: HelloRuntime.csproj  Program.cs
samples/HelloTesting/: HelloTesting.csproj  SampleTests.cs
samples/XFighter/: Program.cs  XFighter.csproj
scripts/: agent-verify.ps1  check-coverage-threshold.ps1  generate-cockpit-asset.ps1  open-latest-golden-report.ps1  pack-all.ps1  pack-local.ps1  raylib-codegen-check.ps1  raylib-doc-check.ps1  raylib-e2e.ps1  run-coverage.ps1  run-golden-tests.ps1  seed-golden-baselines.ps1
src/: Directory.Build.props
src/Novolis.Raylib.Abstractions/: IFixedUpdateSystem.cs  IRaylibFrameRenderer.cs  IRaylibInvalidationSource.cs  IRaylibShellRuntime.cs  IRenderSystem.cs  IShutdownSystem.cs  IStartupSystem.cs  IUpdateSystem.cs  Novolis.Raylib.Abstractions.csproj  README.md
src/Novolis.Raylib.Bindings/: Novolis.Raylib.Bindings.csproj  README.md  RaylibVector3.cs
src/Novolis.Raylib.Capture/: CaptureStreamOptions.cs  CapturedFrame.cs  FrameCapturePipeline.cs  FrameCaptureService.cs  FrameCaptureSession.cs  Novolis.Raylib.Capture.csproj  README.md  RaylibCaptureRuntimeState.cs
src/Novolis.Raylib.CodeGen/: HookDiscovery.cs  Novolis.Raylib.CodeGen.csproj  RaylibCodegenPipeline.cs  RepoPaths.cs
src/Novolis.Raylib.CodeGen.Hooks/: FacadeInliningHook.cs
src/Novolis.Raylib.Diagnostics/: CapturedFrame.cs  GoldenCaptureService.cs  GoldenCaptureSession.cs  GoldenRunMode.cs  Novolis.Raylib.Diagnostics.csproj  RaylibGoldenRuntimeState.cs
src/Novolis.Raylib.Game/: DiagnosticsOverlay.cs  FrameDiagnostics.cs  Novolis.Raylib.Game.csproj  README.md  RayGame.cs  SmoothedFps.cs
src/Novolis.Raylib.Hosting/: Novolis.Raylib.Hosting.csproj  README.md  RaylibHost.cs  RaylibHostBuilderExtensions.cs  RaylibHostOptions.cs  RaylibHostedLoopService.cs  RaylibShellRuntimeAdapter.cs
src/Novolis.Raylib.Input/: IInputSource.cs  InputEventArgs.cs  Novolis.Raylib.Input.csproj  NullInputSource.cs  README.md
src/Novolis.Raylib.Loaders/: Novolis.Raylib.Loaders.csproj  ObjHelper.cs  ObjParser.cs  README.md
src/Novolis.Raylib.Native/: Novolis.Raylib.Native.csproj  README.md
src/Novolis.Raylib.Presentation/: Novolis.Raylib.Presentation.csproj  RaylibCpuFramePresenter.cs
src/Novolis.Raylib.Raygui/: Novolis.Raylib.Raygui.csproj  README.md  RayGuiControls.cs  RayguiShimHost.cs
src/Novolis.Raylib.Raygui.Native/: Novolis.Raylib.Raygui.Native.csproj  README.md
src/Novolis.Raylib.Runtime/: ImguiShimHost.cs  Novolis.Raylib.Runtime.csproj  README.md  RayguiShimHost.cs  RaylibTraceHost.cs
src/Novolis.Raylib.Testing/: DelegateRaylibFrameRenderer.cs  DeterministicFrameClock.cs  FramebufferAssert.cs  Novolis.Raylib.Testing.csproj  README.md  RaylibGlfwTestSync.cs  RaylibHostingTestHost.cs  RaylibOffscreenTestHarness.cs  RaylibOffscreenTestOptions.cs  RaylibOffscreenTestRunResult.cs  RaylibTestRuntime.cs  RaylibTestSession.cs  (+3 more)
tests/: Directory.Build.props
(+230 files in other folders)
